--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3c3bd6c8-c6fb-4d7d-8b73-622251fe7ba4"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
